Added interpretml visuals to random forest
Looks like the library I used isn't easily compatible with xgboost's dmatrix. However, I got the shap visual to work.

--- a/create_train_test.ipynb
+++ b/create_train_test.ipynb
@@ -11,13 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div><div id=8d955ada-4a3d-48bd-b531-85b8805fbd70 style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('8d955ada-4a3d-48bd-b531-85b8805fbd70').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
+       "<div><div id=8c8256ce-886c-4825-bfd8-7bf8efb8bb81 style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('8c8256ce-886c-4825-bfd8-7bf8efb8bb81').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -25,23 +25,23 @@
        "      <th>iyear</th>\n",
        "      <th>imonth</th>\n",
        "      <th>iday</th>\n",
-       "      <th>region</th>\n",
-       "      <th>region_txt</th>\n",
        "      <th>provstate</th>\n",
        "      <th>city</th>\n",
        "      <th>latitude</th>\n",
        "      <th>longitude</th>\n",
+       "      <th>location</th>\n",
+       "      <th>summary</th>\n",
        "      <th>...</th>\n",
-       "      <th>scite3</th>\n",
+       "      <th>addnotes</th>\n",
        "      <th>dbsource</th>\n",
        "      <th>INT_LOG</th>\n",
        "      <th>INT_IDEO</th>\n",
        "      <th>INT_MISC</th>\n",
        "      <th>INT_ANY</th>\n",
-       "      <th>related</th>\n",
        "      <th>Date</th>\n",
        "      <th>Month</th>\n",
        "      <th>TTP</th>\n",
+       "      <th>dayofweek</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -51,12 +51,12 @@
        "      <td>2007</td>\n",
        "      <td>12</td>\n",
        "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>South Asia</td>\n",
        "      <td>Balochistan</td>\n",
        "      <td>Qilla Abdullah district</td>\n",
        "      <td>30.803630</td>\n",
        "      <td>66.711752</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12/03/2007: A bomb exploded in a madrassa in Pakistan killing six. Five students of the madrassa were also injured in the attack by unknown perpetrators.</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>CETIS</td>\n",
@@ -64,10 +64,10 @@
        "      <td>-9</td>\n",
        "      <td>0</td>\n",
        "      <td>-9</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>2007-12-03</td>\n",
        "      <td>Dec</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Monday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -75,12 +75,12 @@
        "      <td>2007</td>\n",
        "      <td>12</td>\n",
        "      <td>4</td>\n",
-       "      <td>6</td>\n",
-       "      <td>South Asia</td>\n",
        "      <td>Khyber Pakhtunkhwa</td>\n",
        "      <td>Peshawar</td>\n",
        "      <td>34.006004</td>\n",
        "      <td>71.537430</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12/04/2007: A female suicide bomber detonated herself in Peshawar, Pakistan. No other casualties were reported in what was believed to have been the first female suicide attack in Pakistan's history.</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>CETIS</td>\n",
@@ -88,10 +88,10 @@
        "      <td>-9</td>\n",
        "      <td>0</td>\n",
        "      <td>-9</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>2007-12-04</td>\n",
        "      <td>Dec</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Tuesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -99,12 +99,12 @@
        "      <td>2007</td>\n",
        "      <td>12</td>\n",
        "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>South Asia</td>\n",
        "      <td>Balochistan</td>\n",
        "      <td>Dera Bugti</td>\n",
        "      <td>29.034412</td>\n",
        "      <td>69.158661</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12/06/2007: A remote controlled roadside bomb went off when two Pakistani military vehicles passed by in Dera Bugti, Balochistan. The blast killed a paramilitary soldier and wounded four others. The Baloch Republican Army claimed responsibility for the attack; however Pakistani officials denied the claim.</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>CETIS</td>\n",
@@ -112,10 +112,10 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>2007-12-06</td>\n",
        "      <td>Dec</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>Thursday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -123,12 +123,12 @@
        "      <td>2007</td>\n",
        "      <td>12</td>\n",
        "      <td>8</td>\n",
-       "      <td>6</td>\n",
-       "      <td>South Asia</td>\n",
        "      <td>Balochistan</td>\n",
        "      <td>Khuzdar</td>\n",
        "      <td>27.809921</td>\n",
        "      <td>66.620956</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12/08/2007: A police station was fired on in Khuzdar, Pakistan, by unknown attackers. No one was injured.</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>CETIS</td>\n",
@@ -136,10 +136,10 @@
        "      <td>-9</td>\n",
        "      <td>0</td>\n",
        "      <td>-9</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>2007-12-08</td>\n",
        "      <td>Dec</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Saturday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -147,12 +147,12 @@
        "      <td>2007</td>\n",
        "      <td>12</td>\n",
        "      <td>9</td>\n",
-       "      <td>6</td>\n",
-       "      <td>South Asia</td>\n",
        "      <td>Balochistan</td>\n",
        "      <td>Nasirabad</td>\n",
        "      <td>28.458421</td>\n",
        "      <td>68.133223</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12/09/2007: Thee members of Benazir Bhutto's Pakistan People's Party (PPP) were killed by attackers in Nasirabad, Pakistan. One attacker was killed in the incident. Ms. Bhutto herself would be killed on December 27, 2007.</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>CETIS</td>\n",
@@ -160,40 +160,47 @@
        "      <td>-9</td>\n",
        "      <td>0</td>\n",
        "      <td>-9</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>2007-12-09</td>\n",
        "      <td>Dec</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Sunday</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table></div>"
       ],
       "text/plain": [
-       "        eventid  iyear  imonth  iday  region  region_txt           provstate  \\\n",
-       "0  200712030005   2007      12     3       6  South Asia         Balochistan   \n",
-       "1  200712040005   2007      12     4       6  South Asia  Khyber Pakhtunkhwa   \n",
-       "2  200712060008   2007      12     6       6  South Asia         Balochistan   \n",
-       "3  200712080003   2007      12     8       6  South Asia         Balochistan   \n",
-       "4  200712090002   2007      12     9       6  South Asia         Balochistan   \n",
+       "        eventid  iyear  imonth  iday           provstate  \\\n",
+       "0  200712030005   2007      12     3         Balochistan   \n",
+       "1  200712040005   2007      12     4  Khyber Pakhtunkhwa   \n",
+       "2  200712060008   2007      12     6         Balochistan   \n",
+       "3  200712080003   2007      12     8         Balochistan   \n",
+       "4  200712090002   2007      12     9         Balochistan   \n",
        "\n",
-       "                      city   latitude  longitude  ... scite3 dbsource  \\\n",
-       "0  Qilla Abdullah district  30.803630  66.711752  ...    NaN    CETIS   \n",
-       "1                 Peshawar  34.006004  71.537430  ...    NaN    CETIS   \n",
-       "2               Dera Bugti  29.034412  69.158661  ...    NaN    CETIS   \n",
-       "3                  Khuzdar  27.809921  66.620956  ...    NaN    CETIS   \n",
-       "4                Nasirabad  28.458421  68.133223  ...    NaN    CETIS   \n",
+       "                      city   latitude  longitude location  \\\n",
+       "0  Qilla Abdullah district  30.803630  66.711752      NaN   \n",
+       "1                 Peshawar  34.006004  71.537430      NaN   \n",
+       "2               Dera Bugti  29.034412  69.158661      NaN   \n",
+       "3                  Khuzdar  27.809921  66.620956      NaN   \n",
+       "4                Nasirabad  28.458421  68.133223      NaN   \n",
        "\n",
-       "   INT_LOG  INT_IDEO  INT_MISC  INT_ANY related        Date Month  TTP  \n",
-       "0       -9        -9         0       -9     NaN  2007-12-03   Dec  NaN  \n",
-       "1       -9        -9         0       -9     NaN  2007-12-04   Dec  NaN  \n",
-       "2        0         0         0        0     NaN  2007-12-06   Dec  0.0  \n",
-       "3       -9        -9         0       -9     NaN  2007-12-08   Dec  NaN  \n",
-       "4       -9        -9         0       -9     NaN  2007-12-09   Dec  NaN  \n",
+       "                                             summary  ...  addnotes  dbsource  \\\n",
+       "0  12/03/2007: A bomb exploded in a madrassa in P...  ...       NaN     CETIS   \n",
+       "1  12/04/2007: A female suicide bomber detonated ...  ...       NaN     CETIS   \n",
+       "2  12/06/2007: A remote controlled roadside bomb ...  ...       NaN     CETIS   \n",
+       "3  12/08/2007: A police station was fired on in K...  ...       NaN     CETIS   \n",
+       "4  12/09/2007: Thee members of Benazir Bhutto's P...  ...       NaN     CETIS   \n",
        "\n",
-       "[5 rows x 71 columns]"
+       "   INT_LOG  INT_IDEO INT_MISC  INT_ANY        Date  Month  TTP dayofweek  \n",
+       "0       -9        -9        0       -9  2007-12-03    Dec  NaN    Monday  \n",
+       "1       -9        -9        0       -9  2007-12-04    Dec  NaN   Tuesday  \n",
+       "2        0         0        0        0  2007-12-06    Dec  0.0  Thursday  \n",
+       "3       -9        -9        0       -9  2007-12-08    Dec  NaN  Saturday  \n",
+       "4       -9        -9        0       -9  2007-12-09    Dec  NaN    Sunday  \n",
+       "\n",
+       "[5 rows x 66 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,9 +212,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Note: NumExpr detected 12 cores but \"NUMEXPR_MAX_THREADS\" not set, so enforcing safe limit of 8.\n",
+      "NumExpr defaulting to 8 threads.\n"
+     ]
+    }
+   ],
    "source": [
     "train_data = data[(data['TTP']==0) | (data['TTP'] ==1)]\n",
     "train_data.to_csv('./DATA/pak_train_data.csv', index=False)"
@@ -215,11 +231,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data = data[pd.isna(data['TTP'])]\n",
+    "test_data = data[pd.isna(data['TTP'])].copy()\n",
+    "del test_data['TTP']\n",
     "test_data.to_csv('./DATA/pak_test_data.csv', index=False)"
    ]
   },
