Adding new explainability notebooks

--- a/data_pipeline.ipynb
+++ b/data_pipeline.ipynb
@@ -327,7 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "remove_cols = ['region', 'region_txt']\n",
+    "remove_cols = ['region', 'region_txt', 'imonth']\n",
     "extra_cols.update(remove_cols)"
    ]
   },
