Added random forest model with explainability and test predictions

--- a/generate_sweetviz_report.ipynb
+++ b/generate_sweetviz_report.ipynb
@@ -30,12 +30,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ignore columns with a lot of text data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ignore columns with a lot of text data\n",
     "remove_cols = ['location','summary','corp1','target1','propcomment','ransomnote','addnotes','Date']\n",
     "keep_cols_train = [col for col in train_data.columns if col not in remove_cols]\n",
     "keep_cols_test = [col for col in test_data.columns if col not in remove_cols]"
@@ -77,10 +83,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Sweetviz Intro\n",
+    "\n",
+    "Sweetviz is a python library that can quickly generate reports describing the relationship between independent variables and our target based on our data. It can also help us see differences between our training and test datasets. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
