--- a/ebm.ipynb
+++ b/ebm.ipynb
@@ -445,6 +445,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate predictions and evaluate"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -485,6 +492,13 @@
    ],
    "source": [
     "print(f\"Predict 0 accuracy: {accuracy_score(y_test, [0 for _ in range(len(y_preds))])}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Explain model and predictions"
    ]
   },
   {
