Adding code from Zach to the repo

--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -2796,6 +2796,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "No overall plot to display: -1|ShapKernel_1\n",
       "No overall plot to display: -1|ShapKernel_1\n"
      ]
     }
