Added Zach's notes

--- a/svm.ipynb
+++ b/svm.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SVM Notes\n",
+    "Settled on the linear with C=10, but if the data set got any larger I would move to RBF with C=10.\n",
+    "Linear was very computationally intensive, but most accurate. RBF ran quickly. Both poly and Sigmoid \n",
+    "ran quickly but had low accuracy."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
